boommenu added to more button

--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Favourite"
+    android:background="@color/colorPrimary"
     android:id="@+id/favourite">
 
     <!-- TODO: Update blank fragment layout -->
